tests/baselines/reference/parserSkippedTokens8.errors.txt
parserSkippedTokens8.ts(2,9): error TS1127: Invalid character.


==== parserSkippedTokens8.ts (1 errors) ====
    ;
    /*foo*/ \ /*bar*/
            
!!! error TS1127: Invalid character.